--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -8,4 +8,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="2015" />
+    </ItemGroup>
+
 </Project>
